Version 0.2 refactor